Hamburger Menu Fix Scroll on Mobile Screen

--- a/style.css
+++ b/style.css
@@ -710,7 +710,7 @@ footer {
     height: 50px;
     z-index: -1;
     opacity: 0;
-    transition: 0.5s ease-in;
+    /* transition: 0.5s ease-in; */
   }
 
   .bar {
@@ -720,31 +720,59 @@ footer {
     border-radius: 12px;
     margin-bottom: 0.5rem;
     transition: 0.4s;
+    opacity: 1;
   }
 
   .toggle-check-box:checked ~ nav .nav-list {
     display: flex;
   }
 
-  .toggle-check-box:checked ~ nav .navbar-toggler .hamburger {
-    opacity: 100;
-  }
-  .toggle-check-box:checked ~ nav .navbar-toggler .bar {
-    display: none;
-  }
+  /* Menu Bars Transition Moves */
 
-  /*   
   .toggle-check-box:checked ~ nav .navbar-toggler .bar:nth-child(1) {
     position: absolute;
-    transform: rotate(45deg);
+    /* transform: rotate(45deg); */
+    transform: translateY(5px);
   }
 
   .toggle-check-box:checked ~ nav .navbar-toggler .bar:nth-child(2) {
-    display: none;
+    position: absolute;
+
+    transform: translateY(10px);
   }
 
   .toggle-check-box:checked ~ nav .navbar-toggler .bar:nth-child(3) {
-    transform: rotate(-45deg);
+    /* transform: rotate(-45deg); */
+    position: absolute;
+    transform: translateY(20px);
+  }
+
+  .toggle-check-box:checked ~ nav .navbar-toggler .hamburger {
+    opacity: 100;
+    z-index: 1;
+  }
+
+  .toggle-check-box:checked ~ nav .navbar-toggler .bar {
+    z-index: -1;
+    opacity: 0;
+  }
+
+  /* @keyframes hamburger {
+    0% {
+      transform: translateY(10px);
+    }
+
+    25% {
+      transform: translateY(50px);
+    }
+
+    50% {
+    }
+    75% {
+    }
+    100% {
+      transform: translateX(-100px);
+    }
   } */
 
   .nav-list {
